--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Gitチュートリアル</h1>
 <p>git status</p>
 <p>git diff</p>
-<p>git commit --amend test3</p>
+<p>git commit test</p>
+<p>git commit test</p>
